hphp/test/slow/object_property/711.php.expectf
NULL
NULL
HipHop Fatal error: Cannot access empty property in %s/hphp/test/slow/object_property/711.php on line 3
